[gd_scene load_steps=18 format=3 uid="uid://d3riimoqfdre7"]

[ext_resource type="Script" path="res://Scripts/skin_selection.gd" id="1_60y6h"]
[ext_resource type="Texture2D" uid="uid://cdanxg63mxf8t" path="res://Art/SkinSelect/1.png" id="1_ttslr"]
[ext_resource type="Texture2D" uid="uid://bni1fwo356wt7" path="res://Art/SkinSelect/2.png" id="2_gsu40"]
[ext_resource type="Texture2D" uid="uid://dp0cywiqool81" path="res://Art/SkinSelect/3.png" id="3_f7c0n"]
[ext_resource type="Texture2D" uid="uid://c7laoonmthh1w" path="res://Art/SkinSelect/4.png" id="4_fjvlm"]
[ext_resource type="Texture2D" uid="uid://u0cwpp2y2h8" path="res://Art/Skins/Pirate4Walk.png" id="5_ghe26"]
[ext_resource type="Texture2D" uid="uid://b84nts07hrx1y" path="res://Art/Skins/Pirate5Walk.png" id="6_7hofy"]
[ext_resource type="Texture2D" uid="uid://cirxvwrchenky" path="res://Art/Skins/Pirate3Walk.png" id="7_1rnff"]
[ext_resource type="FontFile" uid="uid://bg4beac7wm06f" path="res://pixel_pirate.ttf" id="8_hpjyd"]
[ext_resource type="Script" path="res://Scripts/skinSelectButton.gd" id="10_ojvwq"]
[ext_resource type="Script" path="res://Scripts/money_count.gd" id="11_tvo1h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f5hum"]
atlas = ExtResource("5_ghe26")
region = Rect2(0, 0, 400, 500)

[sub_resource type="SpriteFrames" id="SpriteFrames_32726"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5hum")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_0co2m"]
atlas = ExtResource("6_7hofy")
region = Rect2(0, 0, 400, 500)

[sub_resource type="SpriteFrames" id="SpriteFrames_qyr4c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0co2m")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_jvhx7"]
atlas = ExtResource("7_1rnff")
region = Rect2(0, 0, 400, 500)

[sub_resource type="SpriteFrames" id="SpriteFrames_046s7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvhx7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="SkinSelection" type="Node2D" node_paths=PackedStringArray("button1", "button2", "button3", "label")]
script = ExtResource("1_60y6h")
button1 = NodePath("Buys/Button")
button2 = NodePath("Buys/Button2")
button3 = NodePath("Buys/Button3")
label = NodePath("MoneyCount")

[node name="Background" type="Node2D" parent="."]
rotation = 0.00191847

[node name="1" type="Sprite2D" parent="Background"]
position = Vector2(574, 323)
scale = Vector2(1.99653, 2.00617)
texture = ExtResource("1_ttslr")

[node name="2" type="Sprite2D" parent="Background"]
position = Vector2(549.515, 267.946)
scale = Vector2(1.66319, 1.59568)
texture = ExtResource("2_gsu40")

[node name="3" type="Sprite2D" parent="Background"]
position = Vector2(574.323, 167.898)
rotation = 0.00149737
scale = Vector2(1.98785, 1.92284)
texture = ExtResource("3_f7c0n")

[node name="4" type="Sprite2D" parent="Background"]
position = Vector2(575.029, 308)
scale = Vector2(1.98968, 1.29321)
texture = ExtResource("4_fjvlm")

[node name="Skins" type="Node2D" parent="."]

[node name="Regular" type="AnimatedSprite2D" parent="Skins"]
position = Vector2(589, 307)
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_32726")
animation = &"idle"
frame_progress = 0.432216

[node name="Skeleton" type="AnimatedSprite2D" parent="Skins"]
position = Vector2(268, 302)
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_qyr4c")

[node name="Fancy" type="AnimatedSprite2D" parent="Skins"]
position = Vector2(921, 322)
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_046s7")

[node name="Buys" type="Node2D" parent="."]

[node name="Button" type="Button" parent="Buys"]
offset_left = 155.0
offset_top = 471.0
offset_right = 383.0
offset_bottom = 550.0
theme_override_fonts/font = ExtResource("8_hpjyd")
theme_override_font_sizes/font_size = 32
text = "Buy - 50"
script = ExtResource("10_ojvwq")
skinType = 1
cost = 50

[node name="Button2" type="Button" parent="Buys"]
offset_left = 478.0
offset_top = 471.0
offset_right = 706.0
offset_bottom = 550.0
theme_override_fonts/font = ExtResource("8_hpjyd")
theme_override_font_sizes/font_size = 32
text = "Select"
script = ExtResource("10_ojvwq")

[node name="Button3" type="Button" parent="Buys"]
offset_left = 810.0
offset_top = 467.0
offset_right = 1038.0
offset_bottom = 546.0
theme_override_fonts/font = ExtResource("8_hpjyd")
theme_override_font_sizes/font_size = 32
text = "Buy - 100"
script = ExtResource("10_ojvwq")
skinType = 2
cost = 100

[node name="Title" type="RichTextLabel" parent="."]
offset_left = 335.0
offset_top = 1.0
offset_right = 818.0
offset_bottom = 110.0
theme_override_fonts/normal_font = ExtResource("8_hpjyd")
theme_override_font_sizes/normal_font_size = 64
text = "Skin Shop"

[node name="MoneyCount" type="RichTextLabel" parent="."]
offset_left = 433.0
offset_top = 102.0
offset_right = 729.0
offset_bottom = 137.0
theme_override_colors/default_color = Color(1, 1, 0, 1)
theme_override_fonts/normal_font = ExtResource("8_hpjyd")
theme_override_font_sizes/normal_font_size = 16
text = "Doubloons -"
script = ExtResource("11_tvo1h")

[node name="BackButton" type="Button" parent="."]
offset_left = 965.0
offset_top = 20.0
offset_right = 1133.0
offset_bottom = 74.0
theme_override_fonts/font = ExtResource("8_hpjyd")
theme_override_font_sizes/font_size = 16
text = "Main Menu"

[connection signal="pressed" from="Buys/Button" to="." method="_on_skele_pressed"]
[connection signal="pressed" from="Buys/Button2" to="." method="_on_regular_pressed"]
[connection signal="pressed" from="Buys/Button3" to="." method="_on_fancy_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
